# Projet_CIR2_Banque

./: .gitignore  Bout de code  CMakeLists.txt  CMakeListsquimarchepasptn.txt  Projet_CIR2_Banque.wsp  agence1.json  agence2.json  agence3.json  bank.sql  client.cpp  client.h  client.hpp  client.json  compte.json  essai.cpp  main.cpp  main.h  main.hpp  ope_json.cpp  ope_json.h  resource.rc  socket.cpp  socket_client.cpp  socket_serveur.cpp  socket_tools.cpp  socket_tools.hpp  subclient.json  wxWidgets.cpp  wxWidgets.h
customer/: CMakeLists.txt  Customer.cpp  Customer.hpp  Customer_for_JSON.cpp  Customer_for_JSON.hpp
socket/: CMakeLists.txt  socket.cpp  socket_tools.cpp
